# listenbrainz-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  fmt.yml  msrv.yml
examples/: delete_listen.rs  fetch_playlist.rs  rate_limiting.rs  stats_sitewide_artists.rs  submit_listens.rs  user_activity.rs  user_artist_map.rs  user_listens.rs  user_stats.rs  users_recent_listens.rs  validate_token.rs
src/: client.rs  endpoint.rs  error.rs  lib.rs  raw.rs  wrapper.rs
src/models/: mod.rs  request.rs  response.rs
src/raw/: client.rs  endpoint.rs  jspf.rs  mod.rs  request.rs  response.rs
src/raw/response/: mod.rs
src/raw/response/art/: mod.rs
src/raw/response/core/: mod.rs
src/raw/response/metadata/: mod.rs
src/raw/response/misc/: mod.rs
src/raw/response/playlists/: mod.rs
src/raw/response/popularity/: mod.rs
src/raw/response/recommendations/: mod.rs
src/raw/response/recordings/: mod.rs
src/raw/response/settings/: mod.rs
src/raw/response/social/: mod.rs
src/raw/response/statistics/: mod.rs
src/tests/: mod.rs
