[package]
name = "listenbrainz"
version = "0.1.0"
authors = ["Koen Bolhuis <koen.bolhuis@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/InputUsername/listenbrainz-rs.git"
homepage = "https://github.com/InputUsername/listenbrainz-rs"
readme = "README.md"
description = "ListenBrainz API bindings for Rust."
keywords = ["listenbrainz", "api", "bindings"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
