[package]
name = "listenbrainz"
version = "0.8.1"
authors = ["Koen Bolhuis <koen.bolhuis@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/InputUsername/listenbrainz-rs.git"
homepage = "https://github.com/InputUsername/listenbrainz-rs"
readme = "README.md"
description = "ListenBrainz API bindings for Rust"
keywords = ["listenbrainz", "api", "bindings"]
categories = ["api-bindings"]
publish = true
rust-version = "1.71.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
attohttpc = { version = "0.28", default-features = false, features = ["json", "compress"] }

[features]
default = ["tls-rustls"]

# Set the TLS to native-tls (Bumps MSRV to >= 1.80.0)
tls-native = ["attohttpc/tls-native"]

# Set the TLS to native-tls, and use the feature "vendored" (Bumps MSRV to >= 1.80.0)
tls-native-vendored = ["attohttpc/tls-native-vendored"]

# Use rustls for the TLSwith webpki roots 
tls-rustls = ["attohttpc/tls-rustls-webpki-roots"]

# Use rustls for the TLS with native roots 
tls-rustls-native-roots = ["attohttpc/tls-rustls-native-roots"]